--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="xp.html">xp.html</a></li>
         <li><a href="fines.html">fines.html</a></li>
-        <li><a href="fine chart.html">fines.html</a></li>
+        <li><a href="finechart.html">fine pdf chart.html</a></li>
     </ul>
 </body>
 </html>
