--- a/fines.html
+++ b/fines.html
@@ -27,7 +27,7 @@
 
         h1 {
             text-align: center;
-            color: #ff9800;
+            color: #f44336;
         }
 
         label, select, button {
