--- a/fines.html
+++ b/fines.html
@@ -49,7 +49,7 @@
         }
 
         button {
-            background-color: #ff9800;
+            background-color: #f44336;
             color: #000000;
             cursor: pointer;
             transition: background-color 0.3s ease;
