--- a/fines.html
+++ b/fines.html
@@ -56,14 +56,14 @@
         }
 
         button:hover {
-            background-color: #e68a00;
+            background-color: #f11906;
         }
 
         #result {
             text-align: center;
             font-size: 18px;
             margin-top: 20px;
-            color: #ff9800;
+            color: #f44336;
         }
     </style>
 </head>
