--- a/fines.html
+++ b/fines.html
@@ -141,12 +141,13 @@
 </div>
 
 <div class="indicator">
-    <img src="siteimages/image11.png" alt="Indicator Image" width="50">
-    <span>Due to complaints: you can now select the secondary color</span>
+    <span>Due to complaints:</span>
 </div>
-
+<div class="image-container">
+    <img src="siteimages/image11.png" alt="Indicator Image" width="100%">
+</div>
 <div class="secondary-color-container">
-    <h2>Change Secondary Color</h2>
+    <h2>You can now change the secondary color</h2>
     <label for="secondaryColorInput">Enter HEX code:</label>
     <input type="text" id="secondaryColorInput" placeholder="#f44336">
     <button type="button" onclick="changeSecondaryColor()">Apply Color</button>
