--- a/fines.html
+++ b/fines.html
@@ -18,6 +18,7 @@
 
         .main-container {
             display: flex;
+            transform: scale(1.25);
         }
 
         .container {
@@ -231,4 +232,3 @@
 
 </body>
 </html>
-
