--- a/fines.html
+++ b/fines.html
@@ -146,7 +146,7 @@
             <button type="button" onclick="calculateFine()">Calculate Fine</button>
         </form>
 
-        <h2 id="result">Press "calculate" to display a fine</h2>
+        <h2 id="result"></h2>
     </div>
 
     <div class="secondary-color-container">
