--- a/fines.html
+++ b/fines.html
@@ -66,11 +66,14 @@
         }
 
         #result {
-            text-align: center;
-            font-size: 11px;
-            margin-top: 11px;
-            color: #f44336;
-        }
+   		font-size: 11px;
+  		margin-top: 11px;
+    		color: #f44336;
+    		height: 20px;
+		width: 370px;
+   		overflow: hidden;
+	}
+
 
         .secondary-color-container {
             background-color: #1e1e1e;
