--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <p>If you were looking for something, you won't find it here.</p>
     <p>But you can go to:</p>
     <ul>
-        <li><a href="xp.html">xp.html</a></li>
-        <li><a href="fines.html">fines.html</a></li>
-        <li><a href="finechart.html">fine pdf chart.html</a></li>
+        <li><a href="xp.html">Xp Calculator</a></li>
+        <li><a href="fines.html">Mfp fine calculator</a></li>
+        <li><a href="finechart.html">PDF fine chart</a></li>
     </ul>
 </body>
 </html>
