--- a/index.html
+++ b/index.html
@@ -4,15 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nothing Here</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background-color: #1e1e1e;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
+        }
+
+        h1 {
+            color: #f44336;
+        }
+
+        p {
+            margin: 15px 0;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 10px 0;
+        }
+
+        a {
+            color: #f44336;
+            text-decoration: none;
+            font-size: 18px;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #f11906;
+        }
+    </style>
 </head>
 <body>
-    <h1>Nothing Here</h1>
-    <p>If you were looking for something, you won't find it here.</p>
-    <p>But you can go to:</p>
-    <ul>
-        <li><a href="xp.html">Xp Calculator</a></li>
-        <li><a href="fines.html">Mfp fine calculator</a></li>
-        <li><a href="finechart.html">PDF fine chart</a></li>
-    </ul>
+    <div class="container">
+        <h1>Nothing Here</h1>
+        <p>If you were looking for something, you won't find it here.</p>
+        <p>But you can go to:</p>
+        <ul>
+            <li><a href="xp.html">Xp Calculator</a></li>
+            <li><a href="fines.html">Mfp Fine Calculator</a></li>
+            <li><a href="finechart.html">PDF Fine Chart</a></li>
+        </ul>
+    </div>
 </body>
 </html>
+
