--- a/testindex.html
+++ b/testindex.html
@@ -44,7 +44,7 @@
         }
 
         a {
-            color: #f44336;
+            color: #ff0000;
             text-decoration: none;
             font-size: 18px;
             transition: color 0.3s ease;
