--- a/testindex.html
+++ b/testindex.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="warning">WARNING THIS IS THE TESTING </div>
+        <div class="warning">WARNING THIS IS THE TESTING PAGE</div>
         <h1>Nothing Here</h1>
         <p>If you were looking for something, you won't find it here.</p>
         <p>But you can go to:</p>
