--- a/finenewscalingtest.html
+++ b/finenewscalingtest.html
@@ -257,13 +257,16 @@
         button.style.color = "#000000"; 
     });
 
-    // Mobile detection and redirection
-    function redirectToMobile() {
-        if (/Mobi|Android/i.test(navigator.userAgent)) {
-            window.location.href = "https://loong17.github.io/phoneversion.html";
-        }
+function redirectToMobile() {
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    if (/android/i.test(userAgent)) {
+        window.location.href = "https://loong17.github.io/phoneversion.html";
+    } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+        window.location.href = "https://loong17.github.io/phoneversion.html";
     }
+}
 
+redirectToMobile();
     redirectToMobile();
 </script>
 
