--- a/finenewscalingtest.html
+++ b/finenewscalingtest.html
@@ -112,7 +112,7 @@
 
 <div class="main-container">
     <div class="container">
-        <h1>MFP Fine Calculator</h1>
+        <h1>MFP Fineeeee Calculator</h1>
 
         <form id="fineCalculator">
             <label for="rank">Rank:</label>
