--- a/fines.html
+++ b/fines.html
@@ -143,6 +143,7 @@
                 <option value="1">First Offense</option>
                 <option value="2">Second Offense</option>
                 <option value="3">Third Offense</option>
+                <option value="4">Fourth Offense</option>
             </select>
 
             <button type="button" onclick="calculateFine()">Calculate Fine</button>
