--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <ul>
             <li><a href="xp.html">Xp Calculator</a></li>
             <li><a href="fines.html">Mfp Fine Calculator</a></li>
+            <li><a href="fpindex.html">Floating point project</a></li>
         </ul>
     </div>
 </body>
