--- a/render.html
+++ b/render.html
@@ -1,5 +1,3 @@
-create german pseudocode for this:
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -70,10 +68,6 @@ create german pseudocode for this:
           // A high resolution torus knot.
           geometry = new THREE.TorusKnotGeometry(2, 0.5, 300, 20);
           break;
-        case "torusKnot78":
-          // A lower resolution torus knot (7 tubular segments, 8 radial segments).
-          geometry = new THREE.TorusKnotGeometry(2, 0.5, 7, 8, 2, 3);
-          break;
         default:
           geometry = new THREE.SphereGeometry(2, 128, 128);
       }
@@ -127,7 +121,7 @@ create german pseudocode for this:
       const z = parseFloat(document.getElementById("z").value) || 0;
       if (currentMesh) {
         currentMesh.position.set(x, y, z);
-        console.log(Teleported mesh to: (${x}, ${y}, ${z}));
+        console.log(`Teleported mesh to: (${x}, ${y}, ${z})`);
       }
     });
     
